--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Messenger</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="not_registered">Not registered?</string>
+    <string name="sign_in">Sign In</string>
 </resources>
