Chat with friend design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="date">Date</string>
     <string name="user">User</string>
     <string name="job">Job</string>
+    <string name="message">Message</string>
 </resources>
